tests/baselines/reference/inheritanceMemberFuncOverridingProperty.errors.txt
==== tests/cases/compiler/inheritanceMemberFuncOverridingProperty.ts (1 errors) ====
    class a {
        x: () => string;
    }
    
    class b extends a {
          ~
!!! inheritanceMemberFuncOverridingProperty.ts(5,7): error TS2141: Class 'b' cannot extend class 'a':
!!! 	Class 'b' defines instance member function 'x', but extended class 'a' defines it as instance member property.
        x() {
            return "20";
        }
    }